# ReplicaTrader

./: .gitignore  README.md  hardhat.config.js  package.json
backend/: Cargo.toml
backend/src/: binance_api.rs  events_listener.rs  main.rs  trade_processor.rs
config/: .env.example
contracts/: ReplicaTrader.sol
database/: migrations.sql
scripts/: deploy.js  interact.js
tests/: unit_tests.rs
